Fixed image stretching

--- a/Team Sunshine/project.css
+++ b/Team Sunshine/project.css
@@ -89,7 +89,7 @@ main{
   padding: 00px 40px 20px 40px;
 }
 
-main img{
+.mission img{
  width: 100%;
 }
 
